--- a/project_1/client/app/src/main/res/layout/popup_payment.xml
+++ b/project_1/client/app/src/main/res/layout/popup_payment.xml
@@ -8,48 +8,104 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fadingEdge="vertical"
         android:gravity="center"
         android:orientation="vertical"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/option"
-            android:textAlignment="center" />
+        <ImageButton
+            android:id="@+id/btn_close"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            android:contentDescription="@string/contentDescriptionClose"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_marginVertical="10dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btn_option1"
+            <TextView
+                android:id="@+id/text_discount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/checkout_option_discount"
+                android:textAlignment="center" />
+
+            <Spinner
+                android:id="@+id/spinner_discount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="5dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_voucher"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/checkout_option_voucher"
+                android:textAlignment="center" />
+
+            <Spinner
+                android:id="@+id/spinner_voucher"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_type_pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_weight="1"
-                android:text="@string/option_qrcode" />
+                android:text="@string/checkout_option_type_pay"
+                android:textAlignment="center" />
 
-            <Button
-                android:id="@+id/btn_option2"
-                android:layout_width="wrap_content"
+            <Spinner
+                android:id="@+id/spinner_type_pay"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_weight="1"
-                android:text="@string/option_nfc" />
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:textAlignment="center" />
+
         </LinearLayout>
 
         <Button
-            android:id="@+id/btn_close"
-            android:layout_width="wrap_content"
+            android:id="@+id/bt_checkout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#F44336"
-            android:text="@string/option_close" />
+            android:layout_weight="1"
+            android:text="@string/checkout_confirm" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
