Add error messages, fix bugs, document, refactor

--- a/project_1/client/app/src/main/res/layout/activity_main.xml
+++ b/project_1/client/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@color/white" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_main"
