--- a/project_1/client/app/src/main/res/layout/fragment_error.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_error.xml
@@ -2,8 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".fragments.feedback.ErrorFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,8 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:maxWidth="300dp"
         android:text="@string/register_error"
-        android:textColor="#E90909"
+        android:textColor="@color/design_default_color_error"
         android:textStyle="bold" />
 
 </FrameLayout>
