--- a/project_1/client/app/src/main/res/layout/fragment_login.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_login.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/login_hint_name"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -34,6 +35,7 @@
                 android:id="@+id/input_nick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/login_hint_nick"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -48,6 +50,7 @@
                 android:id="@+id/input_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/login_hint_pass"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -58,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5sp"
             android:layout_marginVertical="5sp"
+            android:width="300dp"
             android:text="@string/login_button" />
 
         <androidx.fragment.app.FragmentContainerView
