--- a/project_1/client/app/src/main/res/layout/fragment_register.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_register.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/register_hint_name"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -36,6 +37,7 @@
                 android:id="@+id/input_nick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/register_hint_nick"
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -50,6 +52,7 @@
                 android:id="@+id/input_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:width="300dp"
                 android:hint="@string/register_hint_pass"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -60,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5sp"
             android:layout_marginVertical="5sp"
+            android:width="300dp"
             android:text="@string/register_button" />
 
         <androidx.fragment.app.FragmentContainerView
