--- a/project_1/client/app/src/main/res/layout/popup_payment.xml
+++ b/project_1/client/app/src/main/res/layout/popup_payment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fadingEdge="vertical"
         android:gravity="center"
@@ -29,7 +29,7 @@
             app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="10dp"
             android:layout_weight="1"
@@ -39,21 +39,19 @@
                 android:id="@+id/text_discount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/checkout_option_discount"
-                android:textAlignment="center" />
+                android:text="@string/checkout_option_discount" />
 
             <Spinner
                 android:id="@+id/spinner_discount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:textAlignment="center" />
+                android:minHeight="48dp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="5dp"
             android:layout_weight="1"
@@ -63,20 +61,18 @@
                 android:id="@+id/text_voucher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/checkout_option_voucher"
-                android:textAlignment="center" />
+                android:text="@string/checkout_option_voucher" />
 
             <Spinner
                 android:id="@+id/spinner_voucher"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:textAlignment="center" />
+                android:minHeight="48dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="10dp"
             android:gravity="center"
@@ -84,18 +80,16 @@
 
             <TextView
                 android:id="@+id/text_type_pay"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/checkout_option_type_pay"
-                android:textAlignment="center" />
+                android:text="@string/checkout_option_type_pay" />
 
             <Spinner
                 android:id="@+id/spinner_type_pay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:textAlignment="center" />
+                android:minHeight="48dp" />
 
         </LinearLayout>
 
