--- a/project_1/client/app/src/main/res/layout/fragment_transactions.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_transactions.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.transactions.TransactionsFragment">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/container_vouchers"
-        android:name="com.example.client.fragments.feedback.BlankFragment"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="5sp"
-        android:layout_marginVertical="5sp" />
+        android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/lv_transaction"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <ListView
+            android:id="@+id/lv_transaction"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
