--- a/project_1/Terminal/app/src/main/res/layout/activity_main.xml
+++ b/project_1/Terminal/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,18 +12,15 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?attr/colorPrimary"
-      android:theme="?attr/actionBarTheme" />
+      android:theme="?attr/actionBarTheme"
+      app:titleTextColor="@color/design_default_color_background" />
 
-  <TextView
-      android:id="@+id/tv_title"
+  <androidx.fragment.app.FragmentContainerView
+      android:id="@+id/container"
+      android:name="com.example.terminal.fragments.NeutralFragment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:fontFamily="sans-serif"
-      android:text="@string/tv_title"
-      android:textAlignment="center"
-      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-      android:textSize="18sp"
-      android:textStyle="bold" />
+      android:layout_marginVertical="10sp" />
 
   <TextView
       android:id="@+id/tv_content"
