--- a/project_1/client/app/src/main/res/layout/fragment_error.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_error.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     tools:context=".fragments.feedback.ErrorFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,19 +12,26 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:backgroundTint="@color/design_default_color_error"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="20dp">
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/design_default_color_error"
+            android:src="@android:drawable/stat_notify_error" />
 
         <TextView
             android:id="@+id/error"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:maxWidth="300dp"
             android:text="@string/register_error"
-            android:textColor="@color/design_default_color_error"
+            android:textAlignment="center"
             android:textStyle="bold" />
     </LinearLayout>
 
