Fix payment bugs, display discount value and number of vouchers

--- a/project_1/client/app/src/main/res/layout/activity_main2.xml
+++ b/project_1/client/app/src/main/res/layout/activity_main2.xml
@@ -17,8 +17,7 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/design_default_color_background" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_shopping"
