--- a/project_1/client/app/src/main/res/menu/menu_main.xml
+++ b/project_1/client/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_cart"
+        android:title="@string/menu_cart" />
+    <item
         android:id="@+id/action_profile"
         android:title="@string/menu_profile" />
     <item
