--- a/project_1/client/app/src/main/res/layout/list_voucher.xml
+++ b/project_1/client/app/src/main/res/layout/list_voucher.xml
@@ -38,12 +38,15 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:background="@android:color/transparent"
+                    android:hint="@string/hint_voucher_value"
+                    android:importantForAutofill="no"
                     android:inputType="numberDecimal"
                     android:paddingStart="4dp"
                     android:paddingEnd="4dp"
                     android:text="@string/product_value"
                     android:textColor="#888888"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
