--- a/project_1/client/app/src/main/res/layout/activity_main4.xml
+++ b/project_1/client/app/src/main/res/layout/activity_main4.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".NFCSendActivity">
+    tools:context=".MainActivity4">
 
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
@@ -41,7 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/go_back" />
+            android:text="@string/go_back"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_conclude"
@@ -49,7 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/conclude" />
+            android:text="@string/conclude"
+            android:textStyle="bold" />
       </LinearLayout>
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
