--- a/project_1/client/app/src/main/res/layout/fragment_register.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_register.xml
@@ -31,7 +31,8 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_name"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -46,7 +47,8 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_nick"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -61,7 +63,8 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_pass"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
@@ -83,7 +86,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5sp"
                         android:hint="@string/register_cart_number"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textStyle="bold" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -139,7 +143,8 @@
                 android:layout_marginHorizontal="5sp"
                 android:layout_marginVertical="5sp"
                 android:width="300dp"
-                android:text="@string/register_button" />
+                android:text="@string/register_button"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
