--- a/project_1/client/app/src/main/res/layout/fragment_cart.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_cart.xml
@@ -134,8 +134,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/bottom_button_qr"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/bottom_button_end"
@@ -144,8 +143,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/bottom_button_end"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="14sp" />
             </LinearLayout>
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
