--- a/project_1/client/app/src/main/res/layout/fragment_login.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_login.xml
@@ -30,8 +30,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/login_hint_name"
-                    android:inputType="text"
-                    android:textStyle="bold" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -46,8 +45,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/login_hint_nick"
-                    android:inputType="text"
-                    android:textStyle="bold" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -62,8 +60,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/login_hint_pass"
-                    android:inputType="textPassword"
-                    android:textStyle="bold" />
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
@@ -73,8 +70,7 @@
                 android:layout_marginHorizontal="5sp"
                 android:layout_marginVertical="5sp"
                 android:width="300dp"
-                android:text="@string/login_button"
-                android:textStyle="bold" />
+                android:text="@string/login_button" />
 
         </LinearLayout>
 
