--- a/project_1/client/app/src/main/res/layout/activity_main3.xml
+++ b/project_1/client/app/src/main/res/layout/activity_main3.xml
@@ -54,8 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/go_back"
-                    android:textStyle="bold" />
+                    android:text="@string/go_back" />
 
                 <Button
                     android:id="@+id/btn_conclude"
@@ -63,8 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/conclude"
-                    android:textStyle="bold" />
+                    android:text="@string/conclude" />
             </LinearLayout>
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
