--- a/project_1/client/app/src/main/res/layout/fragment_profile.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_profile.xml
@@ -21,6 +21,16 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/informName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_weight="1"
+                android:text="@string/register_hint_name"
+                android:textSize="20sp" />
+
+            <TextView
                 android:id="@+id/textName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,8 +44,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
-                android:scaleX="0.5"
-                android:scaleY="0.5"
+                android:contentDescription="@string/image_profile_editor"
+                android:scaleX="1"
+                android:scaleY="1"
                 android:src="@android:drawable/ic_menu_edit" />
 
         </LinearLayout>
@@ -46,6 +57,16 @@
             android:layout_marginHorizontal="5dp"
             android:layout_marginVertical="5dp"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/informNick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_weight="1"
+                android:text="@string/register_hint_nick"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textNick"
@@ -62,10 +83,46 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
-                android:scaleX="0.5"
-                android:scaleY="0.5"
+                android:contentDescription="@string/image_profile_editor"
+                android:scaleX="1"
+                android:scaleY="1"
                 android:src="@android:drawable/ic_menu_edit" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/informPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_weight="1"
+                android:text="@string/register_hint_pass"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                android:inputType="text|textPassword|textNoSuggestions"
+                android:text="@string/register_hint_pass" />
+
+            <ImageButton
+                android:id="@+id/editPassButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                android:contentDescription="@string/image_profile_editor"
+                android:src="@android:drawable/ic_menu_edit" />
         </LinearLayout>
 
     </LinearLayout>
