--- a/project_1/client/app/src/main/res/layout/fragment_register.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_register.xml
@@ -31,8 +31,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_name"
-                    android:inputType="text"
-                    android:textStyle="bold" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -47,8 +46,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_nick"
-                    android:inputType="text"
-                    android:textStyle="bold" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -63,8 +61,7 @@
                     android:layout_height="wrap_content"
                     android:width="300dp"
                     android:hint="@string/register_hint_pass"
-                    android:inputType="textPassword"
-                    android:textStyle="bold" />
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
@@ -86,8 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5sp"
                         android:hint="@string/register_cart_number"
-                        android:inputType="number"
-                        android:textStyle="bold" />
+                        android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -143,8 +139,7 @@
                 android:layout_marginHorizontal="5sp"
                 android:layout_marginVertical="5sp"
                 android:width="300dp"
-                android:text="@string/register_button"
-                android:textStyle="bold" />
+                android:text="@string/register_button" />
 
         </LinearLayout>
 
