--- a/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_vouchers.xml
@@ -107,8 +107,7 @@
                 style="?attr/buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/update"
-                android:textStyle="bold" />
+                android:text="@string/update" />
         </com.google.android.material.bottomnavigation.BottomNavigationView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
