Finalize profile and add features to readme

--- a/project_1/client/app/src/main/res/layout/activity_main2.xml
+++ b/project_1/client/app/src/main/res/layout/activity_main2.xml
@@ -14,10 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:foregroundTint="@color/foreground"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@color/foreground" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container_shopping"
