--- a/project_1/client/app/src/main/res/layout/fragment_profile.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_profile.xml
@@ -4,16 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTintMode="add"
+    android:foregroundGravity="center"
     tools:context=".fragments.ProfileFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         android:gravity="center"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/titleUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/blue"
+            android:backgroundTint="@color/blue"
+            android:padding="5dp"
+            android:text="@string/profileTitleUser"
+            android:textAlignment="center"
+            android:textColor="@color/foreground"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -22,13 +36,13 @@
 
             <TextView
                 android:id="@+id/informName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="@string/register_hint_name"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textName"
@@ -37,7 +51,8 @@
                 android:layout_gravity="center"
                 android:elegantTextHeight="true"
                 android:text="@string/register_hint_name"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/editNameButton"
@@ -45,8 +60,8 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
                 android:contentDescription="@string/image_profile_editor"
-                android:scaleX="1"
-                android:scaleY="1"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@android:drawable/ic_menu_edit" />
 
         </LinearLayout>
@@ -54,19 +69,17 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginVertical="5dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/informNick"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="@string/register_hint_nick"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textNick"
@@ -76,7 +89,8 @@
                 android:elegantTextHeight="true"
                 android:gravity="center"
                 android:text="@string/register_hint_nick"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/editNickButton"
@@ -84,8 +98,8 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
                 android:contentDescription="@string/image_profile_editor"
-                android:scaleX="1"
-                android:scaleY="1"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@android:drawable/ic_menu_edit" />
 
         </LinearLayout>
@@ -103,17 +117,18 @@
                 android:layout_marginHorizontal="10sp"
                 android:layout_weight="1"
                 android:text="@string/register_hint_pass"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/textPass"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:backgroundTint="#00FFFFFF"
-                android:inputType="text|textPassword|textNoSuggestions"
-                android:text="@string/register_hint_pass" />
+                android:gravity="center"
+                android:text="@string/register_hint_pass"
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/editPassButton"
@@ -122,6 +137,136 @@
                 android:layout_weight="1"
                 android:backgroundTint="#00FFFFFF"
                 android:contentDescription="@string/image_profile_editor"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:src="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/titleCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/blue"
+            android:backgroundTint="@color/blue"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="5dp"
+            android:text="@string/profileTitleCard"
+            android:textAlignment="center"
+            android:textColor="@color/foreground"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/informType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginVertical="10sp"
+                android:layout_weight="1"
+                android:text="@string/changeTypeParameter"
+                android:textAlignment="textEnd"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/register_cart_type_1"
+                android:textSize="16sp" />
+
+            <ImageButton
+                android:id="@+id/editTypeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                android:contentDescription="@string/image_profile_editor"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:src="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/informNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginVertical="10sp"
+                android:layout_weight="1"
+                android:text="@string/register_cart_number"
+                android:textAlignment="textEnd"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/register_cart_number"
+                android:textSize="16sp" />
+
+            <ImageButton
+                android:id="@+id/editNumberButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                android:contentDescription="@string/image_profile_editor"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:src="@android:drawable/ic_menu_edit" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/informDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginVertical="10sp"
+                android:layout_weight="1"
+                android:text="@string/register_cart_date"
+                android:textAlignment="textEnd"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/register_cart_date_mask"
+                android:textSize="16sp" />
+
+            <ImageButton
+                android:id="@+id/editDateButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                android:contentDescription="@string/image_profile_editor"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@android:drawable/ic_menu_edit" />
         </LinearLayout>
 
