--- a/project_1/client/app/src/main/res/layout/list_voucher.xml
+++ b/project_1/client/app/src/main/res/layout/list_voucher.xml
@@ -30,8 +30,7 @@
                     android:paddingStart="4dp"
                     android:paddingEnd="4dp"
                     android:text="@string/product_name"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/tv_value"
@@ -45,8 +44,7 @@
                     android:paddingEnd="4dp"
                     android:text="@string/product_value"
                     android:textColor="#888888"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:textSize="16sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
