--- a/project_1/client/app/src/main/res/values-night/colors.xml
+++ b/project_1/client/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#3E89FD</color>
-    <color name="foreground">#FFFFFFFF</color>
+    <color name="blue">#b9d4f0</color>
+    <color name="foreground">#FF000000</color>
 </resources>
