--- a/project_1/generator/app/src/main/res/values/themes.xml
+++ b/project_1/generator/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Generator" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.Generator.Light" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">#ffbb33</item>
+        <item name="colorSurface">@color/white</item>
     </style>
 
-    <style name="Theme.Generator" parent="Base.Theme.Generator" />
+    <style name="Theme.Generator" parent="Base.Theme.Generator.Light" />
 </resources>
