--- a/project_1/generator/app/src/main/res/layout/grocery_item.xml
+++ b/project_1/generator/app/src/main/res/layout/grocery_item.xml
@@ -71,8 +71,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:visibility="gone"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/groceryPrice"
