updated button text

--- a/project_1/client/app/src/main/res/layout/fragment_cart.xml
+++ b/project_1/client/app/src/main/res/layout/fragment_cart.xml
@@ -130,18 +130,18 @@
                 <Button
                     android:id="@+id/bottom_button_qr"
                     style="?attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:layout_height="wrap_content"
                     android:text="@string/bottom_button_qr"
                     android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/bottom_button_end"
                     style="?attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:layout_height="wrap_content"
                     android:text="@string/bottom_button_end"
                     android:textSize="14sp" />
             </LinearLayout>
